# revolv-prime-checker

./: .gitignore  CMakeLists.txt  README.md
include/: PrimeChecker.hpp  prime_checker.hpp
lib/: PrimeChecker.cpp  prime_checker.cpp
src/: main.cpp
tests/: test_prime.cpp
